[package]
name = "rusty_express"
description = "A simple server written in Rust and provide Express-alike APIs. Many things are changing and I'm working on completing more features. Please visit the project repository to submit issues or feature requests."
repository = "https://github.com/Chopinsky/Rusty_Express.git"
version = "0.2.7"
authors = ["Jacob Zuo <chopinsky@live.com>"]
license = "MIT"

[dependencies]
regex = "^0.2"
chrono = "^0.4"
lazy_static = "^1.0"