[package]
name = "rusty_express"
description = "A simple http server library written in Rust and provide Express-alike APIs. We know that Rust is hard and daunting, so we will make sure your server can be easy to use without fear!"
readme = "README.md"
documentation = "https://docs.rs/rusty_express/"
repository = "https://github.com/Chopinsky/Rusty_Express.git"
version = "0.4.0"
authors = ["Jacob Zuo <chopinsky@live.com>"]
license = "MIT"
edition = "2018"

[features]
default = ["session", "logger"]
session = []
logger = []

[dependencies]
regex = "^0.2"
chrono = "^0.4"
lazy_static = "^1.0"
rand = "^0.4"
num_cpus = "^1.8"
crossbeam-channel = "^0.2.0"
